[build-system]
requires = [
  "pip>=19.1.1",
  "setuptools>=43",
  "wheel",
  "setuptools_scm",
  "Sphinx",
  "sphinx-rtd-theme",
]

[tool.setuptools_scm]
write_to = "src/xtgeoapp_grd3dmaps/_theversion.py"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | tests/yaml
  | profiling
)/
'''
