[build-system]
requires = [
    "setuptools>=45.0",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/grid3d_maps/version.py"

[project]
name = "grid3d_maps"
description = "Make HC thickness, avg maps, etc directly from 3D props"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Equinor", email = "fg_fmu-atlas@equinor.com" },
]
keywords = [
    "energy", 
    "subsurface", 
    "reservoir", 
    "scientific", 
    "engineering",
    "maps",
    "xtgeo",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["version"]
dependencies = [
    "fmu-config",
    "fmu-dataio>=1.3.0",
    "numpy<2",
    "pyyaml",
    "xtgeo>=2.20.7",
    "xtgeoviz",
]


[project.optional-dependencies]
tests = [
    "black",
    "coverage>=4.1",
    "flake8",
    "isort",
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-runner",
    "pytest-xdist",
    "rstcheck",
    "types-PyYAML",
]
docs = [
    "sphinx",
    "sphinx-argparse",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/equinor/grid3d-maps"
Repository = "https://github.com/equinor/grid3d-maps"
Documentation = "https://equinor.github.io/grid3d-maps"

[project.scripts]
grid3d_hc_thickness = "grid3d_maps.avghc.grid3d_hc_thickness:main"
grid3d_average_map = "grid3d_maps.avghc.grid3d_average_map:main"
grid3d_aggregate_map = "grid3d_maps.aggregate.grid3d_aggregate_map:main"
grid3d_migration_time = "grid3d_maps.aggregate.grid3d_migration_time:main"

[project.entry-points.ert]
grid3d_maps_jobs = "grid3d_maps.hook_implementations.jobs"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
log_cli = "False"
log_cli_format = "%(levelname)8s (%(relativeCreated)6.0fms) %(filename)44s [%(funcName)40s()] %(lineno)4d >>   %(message)s"
log_cli_level = "INFO"
testpaths = "tests"
markers = [
    "integration: Integration tests",
    "requires_ert: A test requiring ert in the environment",
]
